--- a/style.css
+++ b/style.css
@@ -139,15 +139,18 @@ a:visited {
   .box{
     width: 80%;
   }
-
 }
-
 
 
 /*News*/
 
 .news-container {
   background-color: white;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: stretch;
+  gap: 30px;
   }
 
   .news-container h1 {
@@ -158,9 +161,12 @@ a:visited {
     display: flex;
     flex-wrap: wrap;
     align-items: stretch;
-    justify-content: space-between;
+    justify-content: center;
     gap: 30px;
     font-size: 1.5em;
+    /*align-items: stretch;*/
+    /*justify-content: space-between;*/
+    /*font-size: 1.5em */
   }
 
  .news-post {
@@ -168,10 +174,15 @@ a:visited {
   color: black;
   box-sizing: border-box;
   width: 400px;
+  height: auto;
   display: flex;
   gap: 10px;
   flex-direction: column;
   min-height: 100px;
+  flex-wrap: wrap;
+  box-shadow: 0 0 10px rgba(60, 60, 60, 0.6);
+  align-items: center;
+  padding: 20px 10px:
  }
 
   .text {
@@ -188,6 +199,13 @@ a:visited {
   .news i {
     float: right;
   }
+
+@media (max-width: 830px) {
+  .news-post{
+    width: 80%;
+    }
+  }
+
 
 /*Blog posts*/
 
@@ -210,27 +228,31 @@ background-color: white;
 
 
 .blog-post {
-  background: #002855;
+  background: white /*#002855*/;
+  padding: 20px 10px;
   color: black;
   box-sizing: border-box;
   width: 400px;
   display: flex;
   gap: 10px;
   flex-direction: column;
-  min-height: 100px;
+  /*min-height: 100px*/
+  height: auto; /*1.2em;*/
+  /*line-height:*/
+  box-shadow: 0 0 10px rgba(60, 60, 60, 0.6);
+  /*box-shadow: 0 0 10px rgba(60, 60, 60, 0.6);*/
+  align-items: center;
 }
 
 .text {
   margin: 20px;
   background: rgba(255,255,255,0.6);
-
-
 }
 
-.text h3 {
+/*.text h3 {
   color:#000000;
   font-weight: bold;
-}
+}*/
 
 .blog i {
   float: right;
@@ -239,6 +261,13 @@ background-color: white;
 .blog p {
   text-align: right;
   font-size: 1.25em;
+}
+
+
+@media (max-width: 830px){
+.blog-post{
+  width: 80%;
+  }
 }
 
 /*Contact*/
