--- a/style.css
+++ b/style.css
@@ -50,13 +50,13 @@ a:visited {
 }
 
 .logo {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 .navigation-container li {
 list-style: none;
 display: inline-block;
-justify-content: space-between;
+justify-content: space-around;
 text-align: center;
 width: 180px;
 margin-top: 45px;
@@ -74,12 +74,21 @@ a:visited {
     color: black;
 }
 
+@media (max-width: 1327px) {
+  .navigation-container li {
+    width: 300px;
+  }
+
+}
+
+
 
 /*Banner*/
 
-#banner-container {
+.banner-container {
   background-image: url('images/people.jpg');
   background-position: center;
+  width: 100%;
   height: 30em;
   background-repeat: no-repeat;
   background-size: cover;
@@ -89,12 +98,45 @@ a:visited {
 
 }
 
-#banner-container h1 {
+/*.banner-container h1 {
     color: white;
     padding: 10px 20px;
     margin-left: 50px;
     font-size: 3em;
+}*/
+
+.banner-text {
+  color: white;
+  padding: 10px 20px;
+  margin-left: 50px;
+  font-size: 1.5em;
 }
+
+@media (max-width: 950px) {
+    .banner-text {
+    margin-left: 10px;
+    padding: 0;
+    font-size: 1.25em;
+    }
+  }
+
+@media (max-width: 900px) {
+  .banner-container {
+  background-image: url('images/people-small.jpg');
+  }
+
+}
+
+@media (max-width: 850px) {
+  .banner-text {
+    font-size: 1.2em;
+    position: absolute;
+    bottom: 5px;
+    /*left: 16px;*/
+  }
+
+}
+
 
 /*Degrees */
 
@@ -109,7 +151,7 @@ a:visited {
   flex-wrap: wrap;
   background: white;
   justify-content: center;
-  align-items: stretch:
+  align-items: stretch;
   background: white;
   gap: 30px;
 }
@@ -247,6 +289,10 @@ background-color: white;
   margin-left: 30px;
 }
 
+.buttons {
+  float: right;
+}
+
 .button1 {
   background-color: #6B1D0E;
   border: none;
@@ -255,7 +301,7 @@ background-color: white;
   text-align: center;
   text-decoration: none;
   font-size: 1.5em;
-  float: right;
+  /*float: right;*/
   margin-right: 20px;
 }
 
@@ -267,31 +313,106 @@ background-color: white;
   text-align: center;
   text-decoration: none;
   font-size: 1.5em;
-  float: right;
+  /*float: right;*/
   margin-right: 20px;
 }
 
-.icons {
-  position: absolute;
-  right: 25%;
+.icons-container {
+  /*position: absolute;
+  right: 25%;*/
+  display: inline-flex;
+  /*flex-flow: row wrap;*/
 }
 
-.icons h2 {
+/*.follow h2 {
   text-align: center;
+  justify-content: center;
+}*/
+
+.icons {
+  padding: 0;
+  justify-content: center;
+  margin-left: 120px;
+}
+
+.icons ul {
+padding-left: 0;
 }
 
 .icons li {
   list-style: none;
-  display: inline-block;
   font-size: 2em;
-  padding: 15px;
+  /*padding: 15px;*/
   color: black;
   transition: .5s;
-
+  display: inline;
+  padding: 15px;
+  
+  
 }
 
 .icons li:hover {
   color: #6B1D0E;
   border: 1px solid #6B1D0E;
   transition: .5s;
+}
+
+@media (max-width: 885px) {
+  .icons {
+    margin: 0;
+  }
+}
+
+@media (max-width: 764px) {
+  .icons li {
+    padding: 10px;
+  }
+}
+
+@media (max-width: 654px) {
+  .icons li {
+    padding: 7px;
+  }
+}
+
+@media (max-width: 586px) {
+  .icons {
+    flex-flow: row wrap; 
+    max-width: 550
+}
+
+@media (max-width: 550px) {
+  .icons {
+    flex-flow: row wrap; 
+    max-width: 300px;
+
+  }
+
+.icons li {
+    padding: 5px;
+}
+  
+  #contact {
+    margin-left: 10px;
+  }
+
+}
+
+@media (max-width: 550px) {
+  #contact h1 {
+    margin-top: 15px;
+  }
+
+  .button1 {
+    float: left;
+  }
+
+  .button2 {
+    float: left;
+  }
+
+  .contact-text {
+    float: left;
+  }
+
 }
