--- a/style.css
+++ b/style.css
@@ -4,46 +4,9 @@ html, body {
   margin: 0;
 }
 
-@font-face {
-  font-family: "Alternative Gothic";
-  src: url(../font/Gothic/Gothic.otf);
-}
+
 
 /*Navigation bar*/
-/*
-.navigation-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.logo {
-    margin-left: 10px;
-}
-
-.navigation-bar {
-    list-style: none;
-    display: flex;
-}
-
-.nav-item a {
-    display: inline-block;
-    padding: 10px 30px;
-    font-size: 1.5em;
-    margin-right: 10px;
-
-}
-
-a:link {
-    text-decoration: none;
-    color: black;
-}
-
-a:visited {
-    text-decoration: none;
-    color: black;
-}
-*/
 
 .navigation-container {
     display: inline-flex;
@@ -78,6 +41,21 @@ a:visited {
   .navigation-container li {
     width: 300px;
   }
+
+}
+
+@media (max-width: 460px) {
+  ul.navigation-bar {
+    padding-left: 25px;
+  }
+
+  .navigation-container li {
+    text-align: left;
+}
+
+nav.navigation-container {
+  flex-direction: column;
+}
 
 }
 
@@ -123,6 +101,11 @@ a:visited {
 @media (max-width: 900px) {
   .banner-container {
   background-image: url('images/people-small.jpg');
+  width: 100%;
+  height: 30em;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   }
 
 }
@@ -131,10 +114,35 @@ a:visited {
   .banner-text {
     font-size: 1.2em;
     position: absolute;
-    bottom: 5px;
+    bottom: 100px;
     /*left: 16px;*/
   }
 
+}
+
+@media (max-width: 530px) {
+  .banner-container {
+  background-image: url('images/people-small2.jpg');
+  width: 100%;
+  height: 30em;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  }
+
+}
+
+@media (max-width: 515px) {
+  .banner-container {
+    margin-left: 10px;
+  }
+}
+
+@media (max-width: 460px) {
+  .banner-text  {
+    position: absolute;
+    bottom: -250px;
+  }
 }
 
 
@@ -224,7 +232,7 @@ a:visited {
   flex-wrap: wrap;
   box-shadow: 0 0 10px rgba(60, 60, 60, 0.6);
   align-items: center;
-  padding: 20px 10px:
+  padding: 20px 10px;
  }
 
   .text {
@@ -371,7 +379,6 @@ padding-left: 0;
 .icons li {
   list-style: none;
   font-size: 2em;
-  /*padding: 15px;*/
   color: black;
   transition: .5s;
   display: inline;
