--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@ html, body {
   margin: 0;
 }
 
-@font-face {
+/*@font-face {
   font-family: "Alternative Gothic";
   src: url(../font/Gothic/Gothic.otf);
-}
+}*/
 
 /*Navigation bar*/
 /*
@@ -78,7 +78,6 @@ a:visited {
   .navigation-container li {
     width: 300px;
   }
-
 }
 
 
@@ -94,8 +93,6 @@ a:visited {
   background-size: cover;
   display: flex;
   align-items: flex-start;
-
-
 }
 
 /*.banner-container h1 {
@@ -124,17 +121,15 @@ a:visited {
   .banner-container {
   background-image: url('images/people-small.jpg');
   }
-
 }
 
-@media (max-width: 850px) {
+@media (max-width: 830px) {
   .banner-text {
     font-size: 1.2em;
     position: absolute;
     bottom: 5px;
     /*left: 16px;*/
   }
-
 }
 
 
@@ -161,7 +156,7 @@ a:visited {
   display: flex;
   flex-direction: column;
   padding: 20px 10px;
-  font-size: 1.6em;
+  font-size: 1.5em;
   line-height: 1.2em;
   width: 400px;
   height: auto;
@@ -169,18 +164,23 @@ a:visited {
   background: #CDCDCD;
   box-shadow: 0 0 10px rgba(60, 60, 60, 0.6);
   align-items: center;
-
 }
 
 .box li{
-  font-size: 16px;
-  font-family: 'Alternative Gothic';
+  font-size: 1em;
 }
 
 @media (max-width: 830px){
   .box{
     width: 80%;
   }
+}
+
+@media (max-width: 470px) {
+  .degrees{
+    width: 100%;
+  }
+
 }
 
 
@@ -212,7 +212,7 @@ a:visited {
   }
 
  .news-post {
-  background: #6B1D0E;
+  background: white /*#6B1D0E*/;
   color: black;
   box-sizing: border-box;
   width: 400px;
@@ -227,14 +227,14 @@ a:visited {
   padding: 20px 10px:
  }
 
-  .text {
+  .news-post .text {
     margin: 20px;
-    background-color:rgba(0, 0, 0, 0.7);
+    background-color: white/*rgba(0, 0, 0, 0.7)*/;
 
   }
 
   .news p {
-    text-align: right;
+    text-align: center;
     font-size: 1.25em;
   }
 
@@ -242,11 +242,20 @@ a:visited {
     float: right;
   }
 
+  .read-more{
+    width: 400px;
+    align-items: center;
+    box-sizing: border-box;
+  }
+
 @media (max-width: 830px) {
   .news-post{
     width: 80%;
     }
   }
+
+
+
 
 
 /*Blog posts*/
@@ -270,7 +279,7 @@ background-color: white;
 
 
 .blog-post {
-  background: white /*#002855*/;
+  background: #CDCDCD /*#002855*/;
   padding: 20px 10px;
   color: black;
   box-sizing: border-box;
@@ -286,9 +295,9 @@ background-color: white;
   align-items: center;
 }
 
-.text {
+.blog-post .text {
   margin: 20px;
-  background: rgba(255,255,255,0.6);
+  background: #CDCDCD /*rgba(255,255,255,0.6)*/;
 }
 
 /*.text h3 {
@@ -301,7 +310,7 @@ background-color: white;
 }
 
 .blog p {
-  text-align: right;
+  text-align: center;
   font-size: 1.25em;
 }
 
@@ -376,8 +385,8 @@ padding-left: 0;
   transition: .5s;
   display: inline;
   padding: 15px;
-  
-  
+
+
 }
 
 .icons li:hover {
@@ -406,13 +415,13 @@ padding-left: 0;
 
 @media (max-width: 586px) {
   .icons {
-    flex-flow: row wrap; 
+    flex-flow: row wrap;
     max-width: 550
 }
 
 @media (max-width: 550px) {
   .icons {
-    flex-flow: row wrap; 
+    flex-flow: row wrap;
     max-width: 300px;
 
   }
@@ -420,7 +429,7 @@ padding-left: 0;
 .icons li {
     padding: 5px;
 }
-  
+
   #contact {
     margin-left: 10px;
   }
